--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,16 +1,25 @@
 <h1>New Driver</h1>
 
-<%= form_for(@driver) do |f| %>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= form_for(@driver) do |f| %>
 
-	<%= f.label :name %>
-	<%= f.text_field :name %>
+			<%= f.label :name %>
+			<%= f.text_field :name, class: 'form-control' %>
 
-	<%= f.label :email %>
-	<%= f.email_field :email %>
+			<%= f.label :email %>
+			<%= f.email_field :email, class: 'form-control' %>
 
-	<%= f.label :phone %>
-	<%= f.phone_field :phone %>
-	
-  <%= f.label :address %>
-  <%= f.text_field :address %>
-<% end %>
+			<%= f.label :phone %>
+			<%= f.phone_field :phone, class: 'form-control' %>
+			
+		  <%= f.label "Address" %>
+		  <%= f.text_field :address, class: 'form-control' %>
+		
+		  <%= f.label :car_spots %>
+		  <%= f.select :car_spots, ['1', '2', '3', '4', '5', '6']%>
+
+		  <%= f.submit "Sign me up!", class: 'btn btn-primary' %>
+		<% end %>
+	</div>
+</div>
