--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,17 +1,20 @@
-<h1>Ride assignments</h1>
+<h1>Ride Assignments</h1>
 <h2 id="assignment_navs">
-	<strong><%= link_to "Make new assignments", new_assignment_path %> | </strong>
-	<strong><%= link_to "View drivers", drivers_path %></strong> | 
+	<strong><%= link_to "Make new assignments", new_assignment_path %></strong>
+	<br><br>
+	<strong><%= link_to "View drivers", drivers_path %> | </strong>
 	<strong><%= link_to "View riders", riders_path %></strong>
 </h2>
-
+<hr>
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<% @assignments.each do |assignment| %>
-			<h3><%= link_to assignment.event, assignment_path(assignment) %></h3>	
-			<h2><%= assignment.date %></h2>
-			<hr>
-		<% end %>
+		<div id="events">
+			<% @assignments.each do |assignment| %>
+				<h3><%= link_to assignment.event, assignment_path(assignment) %></h3>	
+				<h2><%= assignment.date.to_formatted_s(:long) %></h2>
+				<hr>
+			<% end %>
+		</div>
 
 		<div class="center">
 			<%= will_paginate @assignments, renderer: BootstrapPagination::Rails %>		
