--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,11 +1,13 @@
-<h1>Ride assignments for <%= @assignment.event %></h1>
-<h3><%= @assignment.date %></h3>
-<br><br>
+<h1><%= @assignment.event %></h1>
+<h3><%= @assignment.date.to_formatted_s(:long) %></h3>
+<hr><br>
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<% @assignment.assignments.each do |assignment| %>
 			<strong><%= assignment[:name] %>:</strong>
-			<%= assignment[:riders].join(', ') %>
+			<% assignment[:riders].each do |rider| %>
+				<a href="/riders.html#<%= rider.downcase.split(' ').join('-') %>"><%= rider %></a> | 
+			<% end %>
 			<hr>
 		<% end %>
 		
