--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import url(https://fonts.googleapis.com/css?family=Lato:400,900);
+@import url(https://fonts.googleapis.com/css?family=Varela+Round);
 
 /* mixins, variables, etc. */
 
 $gray-medium-light: #eaeaea;
+$gray: #979797;
+$darker-gray: #383838;
+$light-gray: #d8d8d8;
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -36,6 +39,12 @@ textarea {
   margin: 0px auto;
 }
 
+.btn-secondary {
+  border: 1px solid $gray;
+  border-radius: 10px;
+  background-color: $light-gray;
+}
+
 /* structure */
 
 #banner {
@@ -53,7 +62,7 @@ textarea {
 /* typography */
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Varela Round', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -65,20 +74,12 @@ h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 20px;
-  text-align: center;
 }
 
 h2 {
-  font-size: 1.2em;
   letter-spacing: -1px;
   margin-bottom: 30px;
-  text-align: center;
   font-weight: normal;
-  color: $gray-light;
-}
-
-h3 {
-  text-align: center;
 }
 
 p {
@@ -86,9 +87,6 @@ p {
   line-height: 1.7em;
 }
 
-#assignment_navs {
-  letter-spacing: 0.35px;
-}
 
 #user_name {
   text-decoration: underline;
@@ -99,20 +97,61 @@ p {
   line-height: 80%;
 }
 
-/* header */
+/* navigation */
+
+.navbar {
+  height: 75px;
+  margin-bottom: 0px;
+  background-color: $darker-gray;
+}
 
 #logo {
   float: left;
-  margin-right: 10px;
+  margin-left: 30px;
   font-size: 1.7em;
   color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
+  padding-top: 17px;
   font-weight: bold;
   &:hover {
     color: white;
     text-decoration: none;
+  }
+}
+
+/* header */
+
+header {
+  height: 180px;
+  margin-top: 0px;
+  background-color: $light-gray;
+
+  h1 {
+    position: relative;
+    top: 20px;
+    left: 20px;
+    display: inline-block;
+  }
+
+  .btn {
+    position: relative;
+    top: 40px;
+    padding: 12px 12px;
+    border-radius: 15px;
+    right: 125px;
+    display: inline-block;
+    float: right;
+  
+    a {
+      color: white;
+    }
+
+    span {
+      position: relative;
+      right: 2px;
+      top: 2px;
+    }
   }
 }
 
@@ -175,4 +214,59 @@ input {
 #session_remember_me {
   width: auto;
   margin-left: 0;
+}
+
+/* Side Bar */ 
+
+.header-button {
+  position: relative;
+  top: -130px;
+}
+
+/* Assignments */
+
+#main {
+  position: relative;
+  top: -50px;
+  z-index: 1000;
+  background-color: #FFF;
+  padding: 20px;
+  border: 3px solid $gray;
+  border-radius: 30px;
+}
+
+#events {
+  margin: 0px auto;
+  width: 90%;
+}
+
+#event-name {
+  margin-top: 10px;
+  display: inline-block;
+}
+
+#location {
+  position: relative;
+  top: 26px;
+  display: inline-block;
+  float: right;
+}
+
+/* New Assignments */
+
+#rider-checklist {
+  padding-bottom: 15px;
+} 
+
+#event-title {
+  margin-bottom: 10px;
+}
+
+#arrange-button {
+  margin: 0px auto;
+  width: 150px;
+
+  .btn {
+    border-radius: 10px;
+  }
 }
