--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,7 +1,8 @@
-<h1>New Driver</h1>
+<%= provide(:title, "Sign Up") %>
 
+<h2>New Driver</h2>
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-md-12">
 		<%= form_for(@driver) do |f| %>
 
 			<%= f.label :name %>
