--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,12 @@
-<header class="navbar navbar-default navbar-static-top navbar-inverse">
-  <div class="container">
-    <%= link_to "ACTS Rides", assignments_path, id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-      
-      </ul>
-    </nav>
-  </div>
+<header>
+	<div class="container">
+		<h1><%= yield(:title) %></h1>
+
+		<div class="btn btn-primary">
+			<%= link_to new_assignment_path  do %>
+				<span class="glyphicon glyphicon-plus-sign"></span> New Assignment
+			<% end %>
+		</div>
+
+	</div>
 </header>
