--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<%= render 'layouts/nav' %>
 	<%= render 'layouts/header' %>
 	<div class="container">
-		<%= yield %>
+		<div class="row">
+			<div class="col-md-8">
+				<div id="main">
+					<%= yield %>
+				</div>
+			</div>
+			<%= render 'layouts/aside' %>
+		</div>
 	</div>
 	<%= render 'layouts/footer' %>
 </body>
