--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,8 +16,12 @@ $light-gray: #d8d8d8;
 }
 
 /* universal */
-
-body {
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 section {
@@ -159,7 +163,6 @@ header {
 
 footer {
   text-align: center;
-  margin-top: 45px;
   padding-top: 5px;
   padding-right: 20px;
   padding-left: 20px;
