--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -4,6 +4,18 @@
 <div class="row">
 	<div class="col-md-12">
 		<%= form_for(@driver) do |f| %>
+			<% if @driver.errors.any? %>
+				<div id="error_explanation">
+					<div class="alert alert-danger">
+						The form contains <%= pluralize(@driver.errors.count, "error") %>.
+					</div>
+					<ul>
+						<% @driver.errors.full_messages.each do |msg| %>
+							<li><%= msg %></li>
+						<% end %>
+					</ul>
+				</div>
+			<% end %>
 
 			<%= f.label :name %>
 			<%= f.text_field :name, class: 'form-control' %>
