--- a/app/views/riders/new.html.erb
+++ b/app/views/riders/new.html.erb
@@ -3,6 +3,18 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for(@rider) do |f| %>
+			<% if @rider.errors.any? %>
+				<div id="error_explanation">
+					<div class="alert alert-danger">
+						The form contains <%= pluralize(@rider.errors.count, "error") %>.
+					</div>
+					<ul>
+						<% @rider.errors.full_messages.each do |msg| %>
+							<li><%= msg %></li>
+						<% end %>
+					</ul>
+				</div>
+			<% end %>
 
 			<%= f.label :name %>
 			<%= f.text_field :name, class: 'form-control' %>
