--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,10 +43,20 @@ textarea {
   margin: 0px auto;
 }
 
+.btn-primary {
+  a {
+    color: white;
+  }
+}
+
 .btn-secondary {
   border: 1px solid $gray;
   border-radius: 10px;
   background-color: $light-gray;
+}
+
+.alert {
+  margin: 0px;
 }
 
 /* structure */
@@ -219,12 +229,51 @@ input {
   margin-left: 0;
 }
 
-/* Side Bar */ 
+/* Aside */ 
+aside {
+  width: 300px;
 
-.header-button {
-  position: relative;
-  top: -130px;
+  #aside_nav {
+    width: 280px;
+    margin-top: 30px;
+    padding: 30px 30px 10px 30px;
+    background-color: $light-gray;
+    border: 1px solid $gray;
+    border-radius: 15px;
+  }
+
+  .btn {
+    position: relative;
+    left: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 20px;
+  }
+
+  p {
+    font-size: 0.9em;
+    letter-spacing: 0.5px;
+    line-height: 1.3;
+    text-align: center;
+  }
+
+  #acts-home {
+    margin-top: 15px;
+    p {
+      position: relative;
+      top: -15px;
+    }
+  }
+
+  #facebook {
+    p {
+      margin-top: 7px;
+    }
+  }
 }
+
+
+
 
 /* Assignments */
 
