--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -13,7 +13,8 @@
 					<p><strong>Email: </strong><%= driver.email %></p>
 					<p><strong>Address: </strong><%= driver.address %></p>
 					<%= link_to "edit" %> | 
-					<%= link_to "delete" %>
+					<%= link_to "delete", driver, method: :delete,
+																				data: { confirm: "Are you sure?" } %>
 				</div>
 				<hr>
 			<% end %>
@@ -21,4 +22,8 @@
 		<%= link_to "back", assignments_path %> | 
 		<%= link_to "top" %>
 	</div>
+</div>
+
+<div class="center">
+	<%= will_paginate @assignments, renderer: BootstrapPagination::Rails %>		
 </div>
