--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -1,10 +1,35 @@
 <div class="col-md-4">
 	<div class="container">
+		<aside>
+			<div id="aside_nav">
+				<% unless yield(:title) == "Drivers List" || yield(:title) == "Sign Up" %>
+					<div class="btn btn-primary"><%= link_to "View all drivers", drivers_path %></div>
+				<% end %>	
 
-		<p id="assignment_navs">
-			<strong><%= link_to "View drivers", drivers_path %> | </strong>
-			<strong><%= link_to "View riders", riders_path %></strong>
-		</p>
+				<% unless yield(:title) == "Riders List" || yield(:title) == "Sign Up"%>
+					<div class="btn btn-primary"><%= link_to "View all riders", riders_path %></div>
+				<% end %>
 
+				<% unless yield(:title) == "Ride Assignments" || yield(:title) == "New Assignment" %>
+					<div class="btn btn-primary"><%= link_to "View all events", assignments_path %></div>
+				<% end %>
+			</div>
+
+			<div id="acts-home" class="center">
+				<%= link_to(image_tag("actslogo.png", size: "280x83", alt: "ACTS Austin"), "http://actsaustin.org", :target => '_blank') %>
+				<p>
+					Photo booth occupy kick starter, pork belly butcher pug celiac semiotics actually thunder cats health goth. Pinterest gochujang deep v.
+				</p>
+			</div>
+			<hr>
+			
+			<div id="facebook" class="center">
+				<%= link_to(image_tag("Facebook.png", size: "144x28", alt: "ACTS Austin Facebook"), "https://www.facebook.com/groups/actsaustin", :target => '_blank') %>
+				<p>
+					Photo booth occupy kick starter, pork belly butcher pug celiac semiotics actually thunder cats health goth. Pinterest gochujang deep v.
+				</p>
+			</div>
+			<hr>	
+		</aside>
 	</div>
 </div>
