--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
 </head>
 <body>
 	<%= render 'layouts/nav' %>
+
+	<% flash.each do |message_type, message| %>
+	    <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+   <% end %>
+   
 	<%= render 'layouts/header' %>
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
@@ -19,6 +25,7 @@
 			<%= render 'layouts/aside' %>
 		</div>
 	</div>
+
 	<%= render 'layouts/footer' %>
 </body>
 </html>
