--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -2,7 +2,7 @@
 
 <h2>New Driver</h2>
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-10 col-md-offset-1">
 		<%= form_for(@driver) do |f| %>
 			<% if @driver.errors.any? %>
 				<div id="error_explanation">
@@ -31,8 +31,9 @@
 		
 		  <%= f.label :car_spots %>
 		  <%= f.select :car_spots, ['1', '2', '3', '4', '5', '6']%>
-
-		  <%= f.submit "Sign me up!", class: 'btn btn-primary' %>
+			<div id="form-button">
+				<%= f.submit "Sign me up!", class: 'btn btn-primary' %>
+			</div>
 		<% end %>
 	</div>
 </div>
