--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,19 +2,19 @@
 	<div class="container">
 		<h1><%= yield(:title) %></h1>
 
-		<% if yield(:title) == "Ride Assignments" %>
+		<% if yield(:title) == "Ride Assignments" && admin_signed_in? %>
 			<div class="btn btn-primary">
 				<%= link_to new_assignment_path  do %>
 					<span class="glyphicon glyphicon-plus-sign"></span> New Assignment
 				<% end %>
 			</div>
-		<% elsif yield(:title) == "Drivers List" %>
+		<% elsif yield(:title) == "Drivers List" && admin_signed_in? %>
 			<div class="btn btn-primary">
 				<%= link_to new_driver_path  do %>
 					<span class="glyphicon glyphicon-plus-sign"></span> New Driver
 				<% end %>
 			</div>
-		<% elsif yield(:title) == "Riders List" %>
+		<% elsif yield(:title) == "Riders List" && admin_signed_in? %>
 			<div class="btn btn-primary">
 				<%= link_to new_rider_path  do %>
 					<span class="glyphicon glyphicon-plus-sign"></span> New Rider
