--- a/app/views/riders/new.html.erb
+++ b/app/views/riders/new.html.erb
@@ -1,7 +1,9 @@
-<h1>New Rider</h1>
+<%= provide(:title, "Sign up") %>
+
+<h2>New Rider</h2>
 
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-md-10 col-md-offset-1">
 		<%= form_for(@rider) do |f| %>
 			<% if @rider.errors.any? %>
 				<div id="error_explanation">
@@ -27,8 +29,10 @@
 			
 		  <%= f.label :address %>
 		  <%= f.text_field :address, class: 'form-control' %>
-
-		  <%= f.submit "Sign me up!", class: 'btn btn-primary' %>
+			
+			<div id="form-button">
+				<%= f.submit "Sign me up!", class: 'btn btn-primary' %>
+			</div>
 		<% end %>
 	</div>
 </div>
