Configures sign up

--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -35,5 +35,7 @@
 				<%= f.submit "Sign me up!", class: 'btn btn-primary' %>
 			</div>
 		<% end %>
+
+		<%= link_to "Back", signup_path %>
 	</div>
 </div>
