--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,6 +1,9 @@
 <%= provide(:title, "Drivers List") %>
 
 <h3 class="center"><strong>Total Drivers: </strong><%= @drivers.count %></h3>
+<% if admin_signed_in? %>
+	<p class="center">To add new drivers, send this link: <%= link_to "http://acts-rides.herokuapp.com/signup", signup_path %></p>
+<% end %>
 <hr>
 
 <div class="row">
