--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -4,7 +4,7 @@
 			<div id="acts-home" class="center">
 				<%= link_to(image_tag("actslogo.png", size: "280x83", alt: "ACTS Austin"), "http://actsaustin.org", :target => '_blank') %>
 				<p>
-					Photo booth occupy kick starter, pork belly butcher pug celiac semiotics actually thunder cats health goth. Pinterest gochujang deep v.
+					We are a church that seeks to glorify God through the three Greats of the Bible: the Great Commandment; the Great Community, and the Great Commission.
 				</p>
 			</div>
 			<hr>
@@ -12,8 +12,7 @@
 			<div id="facebook" class="center">
 				<%= link_to(image_tag("Facebook.png", size: "144x28", alt: "ACTS Austin Facebook"), "https://www.facebook.com/groups/actsaustin", :target => '_blank') %>
 				<p>
-					Photo booth occupy kick starter, pork belly butcher pug celiac semiotics actually thunder cats health goth. Pinterest gochujang deep v.
-				</p>
+					Check out our Facebook page for more information about ACF, small group ministries, and prayer meeting locations.
 			</div>
 			<hr>	
 		</aside>
