--- a/app/views/riders/index.html.erb
+++ b/app/views/riders/index.html.erb
@@ -22,7 +22,7 @@
 					<p><strong>Email: </strong><%= rider.email %></p>
 					<p><strong>Address: </strong><%= rider.address %></p>
 					<% if admin_signed_in? %>
-						<%= link_to "edit" %> | 
+						<%= link_to "edit", edit_rider_path(rider) %> | 
 						<%= link_to "delete", rider, method: :delete,
 																					data: { confirm: "Are you sure?" } %>
 					<% end %>
