Add responsive design

--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -7,7 +7,7 @@
 <hr>
 
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-10 col-md-offset-1">
 		<div class="center">
 			<% @drivers.each do |driver| %>
 				<h4 id="user_name <%= name_to_attribute(driver.name) %>"><%= driver.name %></h4>
