--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -1,18 +1,18 @@
 <div class="col-md-4">
-	<div class="container">
+	<div class="container-fluid">
 		<aside>
 			<div id="acts-home" class="center">
-				<%= link_to(image_tag("actslogo.png", size: "280x83", alt: "ACTS Austin"), "http://actsaustin.org", :target => '_blank') %>
-				<p>
-					We are a church that seeks to glorify God through the three Greats of the Bible: the Great Commandment; the Great Community, and the Great Commission.
+				<%= link_to(image_tag("actslogo.png", size: "260x77", alt: "ACTS Austin"), "http://actsaustin.org", :target => '_blank') %>
+				<p class='center' id="link_description">
+					We are a church that seeks to glorify God through the three Greats: the Great Commandment; the Great Community, and the Great Commission.
 				</p>
 			</div>
 			<hr>
 			
 			<div id="facebook" class="center">
 				<%= link_to(image_tag("Facebook.png", size: "144x28", alt: "ACTS Austin Facebook"), "https://www.facebook.com/groups/actsaustin", :target => '_blank') %>
-				<p>
-					Check out our Facebook page for more information about ACF, small group ministries, and prayer meeting locations.
+				<p class='center' id="link_description">
+					Check out our Facebook page for more information about ACF, small groups, and prayer meeting locations.
 			</div>
 			<hr>	
 		</aside>
