--- a/app/views/riders/index.html.erb
+++ b/app/views/riders/index.html.erb
@@ -13,7 +13,7 @@
 
 
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-10 col-md-offset-1">
 		<div class="center">
 			<% @riders.each do |rider| %>
 				<h4 id="<%= name_to_attribute(rider.name) %>"><%= rider.name %></h4>
