--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,14 +55,6 @@ textarea {
   background-color: $light-gray;
 }
 
-#form-button {
-  margin: 0px auto;
-  width: 200px;
-
-  .btn {
-    border-radius: 10px;
-  }
-}
 
 .alert {
   margin: 0px;
@@ -122,20 +114,29 @@ p {
 }
 
 #user_details p {
+  margin: 0 0 5px;
   font-size: 0.9em;
-  line-height: 80%;
+  line-height: 150%;
 }
 
 /* navigation */
 
 .navbar {
-  height: 75px;
   margin-bottom: 0px;
   background-color: $darker-gray;
 }
 
-nav ul {
-  padding-top: 12px;
+button.navbar-toggle {
+  margin-top: 17px;
+}
+
+.navbar-header {
+  min-height: 75px;
+}
+
+#nav-buttons {
+  margin-top: 12px;
+  padding-right: 30px;
 }
 
 #logo {
@@ -145,7 +146,7 @@ nav ul {
   color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 17px;
+  margin-top: 20px;
   font-weight: bold;
   &:hover {
     color: white;
@@ -156,29 +157,20 @@ nav ul {
 /* header */
 
 header {
-  height: 180px;
   margin-top: 0px;
+  padding-bottom: 65px;
   background-color: $light-gray;
 
   h1 {
-    position: relative;
-    top: 20px;
-    left: 20px;
-    display: inline-block;
+    padding-left: 20px;
+    padding-top: 25px;
   }
-
+  
   .btn {
-    position: relative;
-    top: 40px;
+    margin-left: 20px;
+    margin-bottom: 20px;
     padding: 12px 12px;
     border-radius: 15px;
-    right: 125px;
-    display: inline-block;
-    float: right;
-  
-    a {
-      color: white;
-    }
 
     span {
       position: relative;
@@ -187,6 +179,25 @@ header {
     }
   }
 }
+
+@media(min-width: 992px) {
+  header {
+    #head {
+      width: 85%;
+    }
+
+    h1 {
+      display: inline-block;
+    }
+    
+    .btn {
+      display: inline-block;
+      margin-top: 40px;
+      float: right;
+    }
+  }
+}
+
 
 /* footer */
 
@@ -211,7 +222,20 @@ input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
   margin-bottom: 15px;
-  @include box_sizing;
+}
+
+
+#form-button {
+  margin: 0px auto;
+  width: 200px;
+
+  .btn {
+    width: 100%;
+    border-radius: 10px;
+    @include box_sizing;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
 }
 
 input {
@@ -248,9 +272,13 @@ input {
   margin-left: 0;
 }
 
+#admin_remember_me {
+  width: auto;
+}
+
 /* Aside */ 
 aside {
-  width: 300px;
+  width: 100%;
 
   #aside_nav {
     width: 280px;
@@ -270,6 +298,8 @@ aside {
   }
 
   p {
+    margin: 0px auto;
+    width: 260px;
     font-size: 0.9em;
     letter-spacing: 0.5px;
     line-height: 1.3;
@@ -291,15 +321,11 @@ aside {
   }
 }
 
-
-
-
 /* Assignments */
 
 #main {
   position: relative;
   top: -50px;
-  z-index: 1000;
   background-color: #FFF;
   padding: 20px;
   border: 3px solid $gray;
@@ -313,14 +339,22 @@ aside {
 
 #event-name {
   margin-top: 10px;
-  display: inline-block;
+  margin-bottom: 5px;
 }
 
 #location {
-  position: relative;
-  top: 26px;
   display: inline-block;
-  float: right;
+}
+
+@media(min-width: 410px) {
+  #event-name {
+    display: inline-block;
+  }
+
+  #location {
+    margin-top: 14px;
+    float: right;
+  }
 }
 
 /* New Assignments */
@@ -332,4 +366,6 @@ aside {
 #event-title {
   margin-bottom: 10px;
 }
+
+
 
