--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -1,4 +1,4 @@
-<%= provide(:title, "Ride Assignment") %>
+<%= provide(:title, "Rides") %>
 <h2>New Assignment</h2>
 
 <div class="row">
@@ -28,6 +28,7 @@
 			
 			<div id="checklist">
 				<div class="col-md-6">
+					<br>
 					<h4>Drivers</h4>
 					
 					<button type="button" id="check_all_drivers" class="btn btn-secondary">
@@ -44,6 +45,7 @@
 				</div>
 				
 				<div class="col-md-6" id="rider-checklist">
+					<br>
 					<h4>Riders</h4>
 
 					<button type="button" id="check_all_riders" class="btn btn-secondary">
@@ -58,7 +60,7 @@
 					<% end %>				
 				</div>
 			</div>
-
+			
 			<div id="form-button"> 
 				<%= f.submit "Arrange Rides!", class: 'btn btn-primary' %>
 			</div>
