--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,25 +1,27 @@
 <header>
 	<div class="container">
-		<h1><%= yield(:title) %></h1>
+		<div id="head">
 
-		<% if yield(:title) == "Ride Assignments" && admin_signed_in? %>
-			<div class="btn btn-primary">
-				<%= link_to new_assignment_path  do %>
-					<span class="glyphicon glyphicon-plus-sign"></span> New Assignment
-				<% end %>
-			</div>
-		<% elsif yield(:title) == "Drivers List" && admin_signed_in? %>
-			<div class="btn btn-primary">
-				<%= link_to new_driver_path  do %>
-					<span class="glyphicon glyphicon-plus-sign"></span> New Driver
-				<% end %>
-			</div>
-		<% elsif yield(:title) == "Riders List" && admin_signed_in? %>
-			<div class="btn btn-primary">
-				<%= link_to new_rider_path  do %>
-					<span class="glyphicon glyphicon-plus-sign"></span> New Rider
-				<% end %>
-			</div>
-		<% end %>
+			<h1><%= yield(:title) %></h1>
+			<% if yield(:title) == "Assignments" && admin_signed_in? %>
+				<div class="btn btn-primary">
+					<%= link_to new_assignment_path  do %>
+						<span class="glyphicon glyphicon-plus-sign"></span> New Assignment
+					<% end %>
+				</div>
+			<% elsif yield(:title) == "Drivers List" && admin_signed_in? %>
+				<div class="btn btn-primary">
+					<%= link_to new_driver_path  do %>
+						<span class="glyphicon glyphicon-plus-sign"></span> New Driver
+					<% end %>
+				</div>
+			<% elsif yield(:title) == "Riders List" && admin_signed_in? %>
+				<div class="btn btn-primary">
+					<%= link_to new_rider_path  do %>
+						<span class="glyphicon glyphicon-plus-sign"></span> New Rider
+					<% end %>
+				</div>
+			<% end %>
+		</div>
 	</div>
 </header>
