--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,16 @@
-<div class="navbar navbar-default navbar-static-top navbar-inverse">
-	<div class="container">
-		<%= link_to "ACTS Rides", assignments_path, id: "logo" %>
-		<nav>
-		  <ul class="nav navbar-nav navbar-right">
+<nav class="navbar navbar-default navbar-static-top navbar-inverse">
+	<div class="container-fluid">
+		<div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <%= link_to "ACTS Rides", assignments_path, id: "logo" %>
+    </div>
+
+    <div class="collapse navbar-collapse" id="myNavbar">
+		  <ul class="nav navbar-nav navbar-right" id="nav-buttons">
 		  	<li><%= link_to "Assignments", assignments_path %></li>		    
 		    <li><%= link_to "Drivers", drivers_path %></li>
 		    <li><%= link_to "Riders", riders_path %></li>
@@ -12,7 +20,6 @@
 					<li><%= link_to "Log in",  new_admin_session_path %></li>
 				<% end %>
 		  </ul>
-		</nav>
+    </div>
 	</div>
-</div>
-
+</nav>
