--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -38,7 +38,12 @@
 			</div>
 		<% end %>
 
-		<hr>
-		<%= link_to "Back", signup_path %>
+		<% if admin_signed_in? %>
+			<hr>
+			<%= link_to "Back", drivers_path %>
+		<% else %>
+			<hr>
+			<%= link_to "Back", signup_path %>
+		<% end %>
 	</div>
 </div>
