--- a/app/views/riders/new.html.erb
+++ b/app/views/riders/new.html.erb
@@ -35,7 +35,12 @@
 			</div>
 		<% end %>
 		
-		<hr>
-		<%= link_to "Back", signup_path %>
+		<% if admin_signed_in? %>
+			<hr>
+			<%= link_to "Back", riders_path %>
+		<% else %>
+			<hr>
+			<%= link_to "Back", signup_path %>
+		<% end %>
 	</div>
 </div>
