--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -40,10 +40,10 @@
 
 		<% if admin_signed_in? %>
 			<hr>
-			<%= link_to "Back", drivers_path %>
+			<%= link_to "back", drivers_path %>
 		<% else %>
 			<hr>
-			<%= link_to "Back", signup_path %>
+			<%= link_to "back", signup_path %>
 		<% end %>
 	</div>
 </div>
