--- a/app/views/riders/new.html.erb
+++ b/app/views/riders/new.html.erb
@@ -37,10 +37,10 @@
 		
 		<% if admin_signed_in? %>
 			<hr>
-			<%= link_to "Back", riders_path %>
+			<%= link_to "back", riders_path %>
 		<% else %>
 			<hr>
-			<%= link_to "Back", signup_path %>
+			<%= link_to "back", signup_path %>
 		<% end %>
 	</div>
 </div>
