--- a/app/views/user_signups/thankyou.html.erb
+++ b/app/views/user_signups/thankyou.html.erb
@@ -1,6 +1,5 @@
 <h1 class="center">Thank you!</h1>
 <h3 class="center">You are awesome. And you are loved.</h3>
 <div class="center">
-	<%= link_to "View All Drivers", drivers_path %> | 
-	<%= link_to "View All Riders", riders_path %>
+	<%= link_to "View Assignments", root_path %>
 </div>
